travis/deployment_spec_template.yml
apiVersion: v1
kind: Service
metadata:
  name: gov-dmv
spec:
  type: LoadBalancer
  selector:
    app: gov-dmv
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gov-dmv
  labels:
    app: gov-dmv
spec:
  selector:
    matchLabels:
      app: gov-dmv
  template:
    metadata:
      labels:
        app: gov-dmv
    spec:
      containers:
        - name: gov-dmv
          image: verifycreds/gov-dmv
          imagePullPolicy: Always
          ports:
            - name: gov-dmv
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ibm-hr
spec:
  type: LoadBalancer
  selector:
    app: ibm-hr
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibm-hr
  labels:
    app: ibm-hr
spec:
  selector:
    matchLabels:
      app: ibm-hr
  template:
    metadata:
      labels:
        app: ibm-hr
    spec:
      containers:
        - name: ibm-hr
          image: verifycreds/ibm-hr
          imagePullPolicy: Always
          ports:
            - name: ibm-hr
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bbcu
spec:
  type: LoadBalancer
  selector:
    app: bbcu
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbcu
  labels:
    app: bbcu
spec:
  selector:
    matchLabels:
      app: bbcu
  template:
    metadata:
      labels:
        app: bbcu
    spec:
      containers:
        - name: bbcu
          image: verifycreds/bbcu
          imagePullPolicy: Always
          ports:
            - name: bbcu
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  type: LoadBalancer
  selector:
    app: couchdb
  ports:
    - protocol: TCP
      name: couchdb
      port: 5984
      targetPort: 5984
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb
          imagePullPolicy: Always
          ports:
            - name: couchdb
              containerPort: 5984
