travis/ingress_template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingressresource
spec:
  tls:
    - hosts:
        - credimi-dev.us-south.containers.appdomain.cloud
        - gov-dmv.credimi-dev.us-south.containers.appdomain.cloud
        - ibm-hr.credimi-dev.us-south.containers.appdomain.cloud
        - bbcu.credimi-dev.us-south.containers.appdomain.cloud
      secretName: credimi-dev
  rules:
    - host: gov-dmv.credimi-dev.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: gov-dmv
              servicePort: 80
    - host: ibm-hr.credimi-dev.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: ibm-hr
              servicePort: 80
    - host: bbcu.credimi-dev.us-south.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: bbcu
              servicePort: 80
